# Predictive-Insurance-Risk-Analysis

./: .dvcignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PROJECT_STRUCTURE.md  PUSH_TO_GITHUB.md  QUICK_START_GITHUB.md  README.md  TASK1_DELIVERABLES_SUMMARY.md  TASK2_DELIVERABLES_CHECKLIST.md  TASK2_DELIVERABLES_SUMMARY.md  TASK2_VERIFICATION_REPORT.md  TASK3_DELIVERABLES_CHECKLIST.md  TASK4_DELIVERABLES_CHECKLIST.md  coverage.xml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  code-quality.yml  release.yml
config/: config.yaml
data/processed/: .gitkeep
data/raw/: .gitkeep  MachineLearningRating_sample.txt
docs/: EXECUTION_PLAN.md  IMPLEMENTATION_GUIDE.md
docs/api/: README.md
docs/architecture/: README.md
docs/guides/: README.md  development.md  github-setup.md  installation.md  running-locally.md
docs/task1/: README.md
docs/task2/: README.md  REPRODUCIBILITY_GUIDE.md
docs/task3/: README.md
docs/task4/: README.md
notebooks/exploratory/: README.md
requirements/: base.txt  dev.txt  lock.txt  prod.txt
results/: .gitkeep  decision_summary.json  model_benchmark_summary.json
results/figures/: .gitkeep
results/reports/: .gitkeep  task4_top_features.json
results/task4/: task4_results.json
scripts/: check_dependencies.py  generate_sample_data.py  run_analysis.py  run_pipeline.py  run_task3.py  run_task4.py  setup.py  setup_dvc.ps1  setup_dvc.sh  setup_remote.ps1  setup_remote.sh  verify_task2.ps1
src/: __init__.py
src/analysis/: __init__.py
src/analysis/task3/: __init__.py  hypothesis_testing.py  metrics.py  reporting.py  segmentation.py  statistical_tests.py  visualizations.py
src/analysis/task4/: __init__.py  data_preparation.py  interpretability.py  models.py  reporting.py  task4_runner.py
src/data/: __init__.py  loaders.py  preprocessing.py  validators.py
src/decision/: __init__.py  justification.py
src/evaluation/: __init__.py  benchmark_summary.py  metrics.py
src/models/: __init__.py  selector.py  trainer.py
src/utils/: __init__.py  config.py  logger.py
tests/: __init__.py  conftest.py  test_data.py  test_justification.py  test_metrics.py  test_model_selector.py  test_reproducibility.py
tests/fixtures/: sample_insurance_data.csv
tests/unit/: test_config.py  test_loaders.py  test_validators.py
